# CEX

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs  server.rs
api/src/routes/: health.rs  markets.rs  mod.rs  orders.rs
api/tests/: orders_flow.rs
db/: Cargo.toml
db/migrations/: 0001_create_events.sql
db/src/: lib.rs  main.rs
db_filler/: Cargo.toml
db_filler/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs  main.rs  processor.rs
engine/src/orderbook/: book.rs  levels.rs  mod.rs
engine/tests/: e2e_flow.rs  orderbook_tests.rs
redis/: Cargo.toml
redis/src/: lib.rs  manager.rs  publisher.rs  queues.rs  subscriber.rs
shared/: Cargo.toml
shared/src/: constants.rs  error.rs  events.rs  lib.rs  utils.rs
shared/src/types/: depth.rs  market.rs  mod.rs  order.rs  trade.rs  user.rs
shared/src/utils/: json.rs  mod.rs
ws/: Cargo.toml
ws/src/: handlers.rs  lib.rs  main.rs  server.rs  session.rs
