[workspace]
members = ["api", "db", "db_filler", "engine", "redis", "ws","shared"]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
actix-cors = "0.6"
async-trait = "0.1"
chrono = "0.4"
confik = "0.11"
dotenvy = "0.15"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "rust_decimal",
    "chrono",
] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
fred = { version = "9.2", features = ["subscriber-client"] }
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
futures-util = "0.3"
tokio-tungstenite = "0.24"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9"
argon2 = "0.5"
