[package]
name = "db_filler"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
redis = { path = "../redis" }
db = { path = "../db" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
tracing = { workspace = true }
env_logger = { workspace = true }
