[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
redis-rs = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
